--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.17.9",
+    "@types/prop-types": "^15.7.14",
+    "@types/react": "^18.3.14",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
